<?xml version="1.0"?>
<package format="3">
  <name>ocs2_ballbot</name>
  <version>0.0.0</version>
  <description>The ocs2_ballbot package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>pybind11_vendor</depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_slp</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_python_interface</depend>
  <depend>ocs2_robotic_tools</depend>

  <export>                               
   <build_type>ament_cmake</build_type>
  </export> 

</package>
