<?xml version="1.0"?>
<package format="2">
  <name>ocs2_mobile_manipulator</name>
  <version>0.0.0</version>
  <description>The ocs2_mobile_manipulator package</description>

  <maintainer email="mspieler@ethz.ch">Michael Spieler</maintainer>
  <maintainer email="fperry@ethz.ch">Perry Franklin</maintainer>
  <maintainer email="mittalma@ethz.ch">Mayank Mittal</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_robotic_assets</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_self_collision</depend>
  <depend>pinocchio</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>                               
   <build_type>ament_cmake</build_type>
  </export>
</package>